# ssl-client

./: .gitignore  .gitmodules  DEVNOTES-pt_br.md  README.md  configure.bat  configure.sh  meson.build  meson_options.txt  pbssl.pro  run.sh  test.sh
conf/: detect_opencv_with_opengl.cpp  meson.build
conf/pinguim/: conf.hpp.in  meson.build
proto/: meson.build
proto/src/proto/: packet.proto  replacement.proto  vssref_command.proto  vssref_placement.proto
scripts/: build_kenney_font_sources.sh  kenney_font_glyphmap.txt  meson.build  pngs2imguiFont.py
src/: main.cpp  pch.h  pch.hpp
src/net/: grSim_client.cpp  grSim_client.h  robocup_ssl_client.cpp  robocup_ssl_client.h  robocup_ssl_server.cpp  robocup_ssl_server.h
src/pb/: messages_robocup_ssl_geometry_legacy.proto  messages_robocup_ssl_refbox_log.proto  messages_robocup_ssl_wrapper.proto  messages_robocup_ssl_wrapper_legacy.proto  packet.proto  replacement.proto  vssref_command.proto  vssref_placement.proto
src/pbts/: common.cpp  common.hpp  control.cpp  control.h  control.hpp  parse.cpp  parse.hpp  qol.hpp  simulator_connection.cpp  simulator_connection.hpp  strategy.cpp  strategy.h  strategy.hpp  strategy_d.cpp  strategy_r.cpp  utility.cpp
src/pinguim/: aliases.hpp  chrono.hpp  common.cpp  common.hpp  container.hpp  control.cpp  control.hpp  cvt.hpp  dont_forget.hpp  enums.hpp  geometry.cpp  geometry.hpp  list.hpp  math.hpp  parse.cpp  parse.hpp  qol.hpp  renum.hpp  scoped.cpp  scoped.hpp  simulator_connection.cpp  simulator_connection.hpp  strategy.hpp  strategy_d.cpp  strategy_r.cpp  timer.hpp  toolbox  utility.cpp  utils.hpp
src/pinguim/app/: cmdline.hpp  main.cpp  oldmain.cpp  pch.hpp  subsystems.hpp  ui.cpp  ui.hpp
src/pinguim/app/subsystems/: all  manager.cpp  manager.hpp  registrar.cpp  registrar.hpp  types.hpp
src/pinguim/app/subsystems/input/: firasim.cpp  firasim.hpp  vision.cpp  vision.hpp  vision_disabled.inc.cpp  vision_disabled.inc.hpp  vision_enabled.cpp.inc  vision_enabled.inc.cpp  vision_enabled.inc.hpp
src/pinguim/app/subsystems/input/vision/: colors.cpp  colors.hpp  contours.hpp  extraction.cpp  extraction.hpp  pipeline.cpp  pipeline.hpp  preprocess.hpp  segmentation.cpp  segmentation.hpp
src/pinguim/app/subsystems/logic/: direct_control.cpp  direct_control.hpp  strategy.cpp  strategy.hpp
src/pinguim/app/subsystems/misc/: imgui_debug.cpp  imgui_debug.hpp  profiler.cpp  profiler.hpp
src/pinguim/app/subsystems/output/: firasim.cpp  firasim.hpp  serial.cpp  serial.hpp
src/pinguim/imgui/: fmt.hpp  img.cpp  img.hpp  opencv.cpp  opencv.hpp  plumber.cpp  plumber.hpp
src/pinguim/imgui/fonts/: kenney_game_icons.cpp  kenney_game_icons.hpp  loader.cpp  loader.hpp
src/pinguim/imgui/widgets/: color_range.hpp  group_panel.cpp  group_panel.hpp  toggle_button.cpp  toggle_button.hpp
src/pinguim/standalone/: forward.hpp  readme.md  remove_cvref.hpp
src/pinguim/vsss/: command.hpp  common.cpp  common.hpp  control.cpp  control.hpp  control2.cpp  control2.hpp  data.hpp  game_info.hpp  simulator_connection.cpp  simulator_connection.hpp  strategy.cpp  strategy.hpp  strategy_d.cpp  strategy_r.cpp  tuplified_proto.hpp  utility.cpp
src/pinguim/vsss/firasim/: tuplified_proto.hpp
src/pinguim/vsss/net/: multicast_udp_receiver.cpp  multicast_udp_receiver.hpp  pre_asio.hpp  udp_sender.cpp  udp_sender.hpp
src/pinguim/vsss/net/decoders/: sim.hpp
src/pinguim/vsss/net/encoders/: sim.hpp
src/pinguim/vsss/strategy/: wavefront.hpp
ssl-Client/: Makefile  control.cpp  control.h  main  main.cpp  moc_grSim_client.cpp  ssl-Client.pro  strategy.h
ssl-Client/net/: grSim_client.cpp  grSim_client.h
subprojects/: .gitignore  asio.wrap  glew.wrap  glm.wrap  imgui.wrap  imgui_file_dialog.wrap  opencv.wrap  protobuf.wrap  sdl2.wrap  xext.wrap  xfixes.wrap  xi.wrap
subprojects/packagefiles/asio/: meson.build
subprojects/packagefiles/glew/: meson.build
subprojects/packagefiles/glm/: meson.build
subprojects/packagefiles/imgui/: meson.build
subprojects/packagefiles/imgui/backends/: imgui_impl_opengl3.cpp
subprojects/packagefiles/imgui_file_dialog/: ImGuiFileDialogConfig.h  meson.build
subprojects/packagefiles/opencv/: meson.build  meson_options.txt
subprojects/packagefiles/opencv/conf/: meson.build
subprojects/packagefiles/opencv/conf/depend/: meson.build
subprojects/packagefiles/opencv/conf/opencv2/: cvconfig.h.in  meson.build  opencv_modules.hpp.in
subprojects/packagefiles/opencv/conf/optimizations/: meson.build
subprojects/packagefiles/opencv/modules/core/: internal_headers.txt  meson.build  opencl_kernels.txt  sources.txt
subprojects/packagefiles/opencv/modules/core/conf/: meson.build
subprojects/packagefiles/opencv/modules/imgproc/: internal_headers.txt  meson.build  opencl_kernels.txt  sources.txt
subprojects/packagefiles/opencv/modules/videoio/: meson.build
subprojects/packagefiles/opencv/scripts/: cl2cpp.py  make_build_string_inc.py  make_dispatched_files.py  meson.build
subprojects/packagefiles/protobuf/: meson.build
subprojects/packagefiles/xext/: meson.build
subprojects/packagefiles/xfixes/: meson.build
subprojects/packagefiles/xi/: meson.build
subprojects/simproto/: meson.build  simproto.hpp
subprojects/simproto/pinguim/simproto/: all  meson.build  packet.proto
tests/: cvt.cpp  math.cpp  meson.build  renum.cpp  scoped.cpp
tooling/: .gitignore  programs.sh  semver.sh  setup_tooling.sh  setup_tooling2.sh
tools/: .gitignore  setup_toolchain.sh
