option('shush', type: 'boolean', value: true,
    description:
        'Disables all warnings, use this if compiling as a subproject ' +
        'and don\'t want to be annoyed'
)

option('modules', type: 'array', value: ['core'], 
    choices: [
        'core',
        'flann',
        'imgproc',
        'ml',
        'features2d',
        'dnn',
        'imgcodecs',
        'calib3d',
        'videoio',
        'stitching',
        'photo',
        'video',
        'objdetect',
        'highgui',
        'gapi',
    ],
    description: 'What modules to build'
)

option('print_conf', type: 'boolean', value: false)
option('print_optimizations', type: 'boolean', value: false,
    description: 'Prints optimization support as it goes through, see conf/optimizations/meson.build'
)

option('enable_nonfree', type: 'boolean', value: false,
    description: 'Enable non-free algorithms'
)

option('videoio_plugin_list', type: 'array', value: ['default'], choices: ['default', 'ffmpeg', 'gstreamer', 'mfx', 'msmf', 'all'],
    description:
        'List of videoio backends to be compiled as plugins (ffmpeg, gstreamer, ' +
        'mfx, msmf or special values \'all\' and \'default\'. ' +
        'When defaulted will select \'all\' on linux and none on windows and mac'
)

option('ipp_gaussian_blur', type: 'boolean', value: false,
    description: 'Enable IPP optimizations for GaussianBlur (+8Mb in binary size)'
)
