project('xi', 'c')

sources = files(
    'src/XIAllowEvents.c',
    'src/XAllowDv.c',
    'src/XChDProp.c',
    'src/XChgDCtl.c',
    'src/XChgFCtl.c',
    'src/XChgKbd.c',
    'src/XChgKMap.c',
    'src/XChgPnt.c',
    'src/XChgProp.c',
    'src/XCloseDev.c',
    'src/XDelDProp.c',
    'src/XDevBell.c',
    'src/XExtToWire.c',
    'src/XGetBMap.c',
    'src/XGetCPtr.c',
    'src/XGetDCtl.c',
    'src/XGetDProp.c',
    'src/XGetFCtl.c',
    'src/XGetKMap.c',
    'src/XGetMMap.c',
    'src/XGetProp.c',
    'src/XGetVers.c',
    'src/XGMotion.c',
    'src/XGrabDev.c',
    'src/XGrDvBut.c',
    'src/XGrDvKey.c',
    'src/XGtFocus.c',
    'src/XGtSelect.c',
    'src/XListDev.c',
    'src/XListDProp.c',
    'src/XOpenDev.c',
    'src/XQueryDv.c',
    'src/XSelect.c',
    'src/XSetBMap.c',
    'src/XSetDVal.c',
    'src/XSetMMap.c',
    'src/XSetMode.c',
    'src/XSndExEv.c',
    'src/XStFocus.c',
    'src/XUngrDev.c',
    'src/XUngrDvB.c',
    'src/XUngrDvK.c',
    'src/XExtInt.c',
    'src/XIint.h',
    'src/XIGrabDevice.c',
    'src/XIQueryVersion.c',
    'src/XIQueryDevice.c',
    'src/XISetDevFocus.c',
    'src/XIGetDevFocus.c',
    'src/XIPassiveGrab.c',
    'src/XIProperties.c',
    'src/XISelEv.c',
    'src/XISetCPtr.c',
    'src/XIWarpPointer.c',
    'src/XIHierarchy.c',
    'src/XIDefineCursor.c',
    'src/XIQueryPointer.c',
    'src/XIBarrier.c',
)

libxi = library(
    'xi',
    sources,
    dependencies: [dependency('x11'), dependency('xext'), dependency('xfixes')],
    include_directories: include_directories('src', 'include'),
)

xi_dep = declare_dependency(
    link_with: libxi,
    # Transitively export the dependencies (needed when a file from here is included).
    dependencies: [dependency('xext'), dependency('xfixes')],
    include_directories: include_directories('include'),
)
